[package]
name = "easy-jsonrpc-mwc"
description = """
Convert a trait definition into a jsonrpc api.
"""
repository = "https://github.com/mwcproject/easy-jsonrpc-mwc"
version = "0.5.6"
authors = ["Andrew Dirksen <andrew@dirksen.com>", "Yeastplume <yeastplume@protonmail.com>", "MWC Developers <info@mwc.mw>"]
license = "Apache-2.0"
documentation = "https://docs.rs/easy-jsonrpc"
edition = "2018"
readme = "readme.md"
keywords = ["json", "rpc", "macro", "client", "server"]

[dependencies]
easy-jsonrpc-proc-macro-mwc = { path = "./proc_macros", version = "0.5.2" }
serde_json = "1"
serde = "1"
jsonrpc-core = "10.0.1"
rand = "0.6.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = "0.9.18"
warp = "0.1.16"
